--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,6 @@
-sonar.projectKey = PMDSys
+sonar.projectKey = pmdsys
 sonar.projectName = PMDSys
 sonar.projectVersion = 1
-sonar.sources = PMDSys
-sonar.exclusions = PMDSys/node_modules/**
+sonar.sources = PASTA_PROJETO
+sonar.exclusions = PASTA_PROJETO/node_modules/**
 sonar.language=js
-sonar.sourceEncoding=UTF-8
-sonar.host.url= https://sonarqube.com
-sonar.login= 
