--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey = pmdsys
 sonar.projectName = PMDSys
 sonar.projectVersion = 1
-sonar.sources = PASTA_PROJETO
-sonar.exclusions = PASTA_PROJETO/node_modules/**
+sonar.sources = pmdsys
+sonar.exclusions = pmdsys/node_modules/**
 sonar.language=js
