--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 sonar.projectKey = pmdsys
 sonar.projectName = PMDSys
 sonar.projectVersion = 1
-sonar.exclusions=**/node_modules/**,**/*.spec.ts
 sonar.language=ts
-sonar.tests=pmdsys/app
+sonar.exclusions=**/node_modules/**,**/*.spec.ts
+sonar.tests=src/app
 sonar.test.inclusions=**/*.spec.ts
 sonar.ts.tslint.configPath=tslint.json
 sonar.ts.coverage.lcovReportPath=test-results/coverage/coverage.lcov
