--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,9 @@ sonar.projectKey = pmdsys
 sonar.projectName = PMDSys
 sonar.projectVersion = 1
 sonar.language=ts
+sonar.projectVersion=1.0
+sonar.sourceEncoding=UTF-8
+sonar.sources=src/app
 sonar.exclusions=**/node_modules/**,**/*.spec.ts
 sonar.tests=src/app
 sonar.test.inclusions=**/*.spec.ts
