--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,9 +4,9 @@ sonar.projectVersion = 1
 sonar.language=ts
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
-sonar.sources=src/app
+sonar.sources=pmdsys/src/app
 sonar.exclusions=**/node_modules/**,**/*.spec.ts
-sonar.tests=src/app
+sonar.tests=pmdsys/src/app
 sonar.test.inclusions=**/*.spec.ts
 sonar.ts.tslint.configPath=tslint.json
 sonar.ts.coverage.lcovReportPath=test-results/coverage/coverage.lcov
