--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey = pmdsys
 sonar.projectName = PMDSys
 sonar.projectVersion = 1
-sonar.language=ts
+sonar.language=.ts
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 sonar.sources=pmdsys/src/app
