--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,8 +5,6 @@ sonar.language=.ts
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 sonar.sources=pmdsys/src/app
-sonar.exclusions=**/node_modules/**,**/*.spec.ts
-sonar.tests=pmdsys/src/app
-sonar.test.inclusions=**/*.spec.ts
-sonar.ts.tslint.configPath=tslint.json
-sonar.ts.coverage.lcovReportPath=test-results/coverage/coverage.lcov
+sonar.language=ts
+sonar.javascript.jstest.reportsPath=reports/junit
+sonar.ts.lcov.reportpath=coverage/report-lcov/coverage.lcov
