--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,13 @@ before_script:
     - npm install
     - export JAVA_HOME=/usr/lib/jvm/java-8-oracle
 
+before_install:
+    - export DISPLAY=:99.0
+    - sh -e /etc/init.d/xvfb start
+    - npm install -g karma
+    - npm install -g typescript
+    - npm install -g tsd
+
 script: 
   - npm test
   - cd ..
