--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,6 @@
 sonar.projectKey = pmdsys
 sonar.projectName = PMDSys
 sonar.projectVersion = 1
-sonar.language=.ts
-sonar.projectVersion=1.0
-sonar.sourceEncoding=UTF-8
-sonar.sources=pmdsys/src/app
-sonar.language=ts
-sonar.javascript.jstest.reportsPath=reports/junit
-sonar.ts.lcov.reportpath=coverage/report-lcov/coverage.lcov
+sonar.sources = pmdsys/src/app
+sonar.exclusions = pmdsys/node_modules/**
+sonar.language=js
