--- a/.travis.yml
+++ b/.travis.yml
@@ -14,21 +14,16 @@ addons:
     token: $SONAR_TOKEN
    
 before_script:
-    - cd pmdsys
+    - cd PASTA_PROJETO
     - npm install
     - export JAVA_HOME=/usr/lib/jvm/java-8-oracle
 
-before_install:
-    - export DISPLAY=:99.0
-    - sh -e /etc/init.d/xvfb start
-    - npm install -g karma
-    - npm install -g typescript
-    - npm install -g tsd
-
 script: 
   - npm test
+  - ionic build browser --prod
   - cd ..
-  - sonar-scanner -ts
+  - sonar-scanner
+
 
 notifications:
   slack: 
