--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,13 @@ addons:
   sonarqube:
     organization: "adlerosn-github"
     token: $SONAR_TOKEN
-   
+ services:
+  - docker
+
+install:
+  - docker build -t sonarqube-sonartsplugin .
+  - docker run -d -p 127.0.0.1:29000:9000 -p 127.0.0.1:29092:9092 --name sonar sonarqube-sonartsplugin
+
 before_script:
     - cd PASTA_PROJETO
     - npm install
@@ -21,12 +27,13 @@ before_script:
     - export JAVA_HOME=/usr/lib/jvm/java-8-oracle
 
 script: 
+  - docker ps | grep -q sonar
   - npm test
   - cd ../pmdsys
+  - ionic platform add browser
   - ionic build browser --prod
   - cd ..
   - sonar-scanner
-
 
 notifications:
   slack: 
