--- a/pmdsys/tsconfig.json
+++ b/pmdsys/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "outDir": "./built",
+    "allowJs": true,
+    "target": "es5",
     "allowSyntheticDefaultImports": true,
     "declaration": false,
     "emitDecoratorMetadata": true,
@@ -10,19 +13,17 @@
     ],
     "module": "es2015",
     "moduleResolution": "node",
-    "sourceMap": true,
-    "target": "es5"
+    "sourceMap": true
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "./src/**/*"
   ],
   "exclude": [
     "node_modules"
   ],
-  "compileOnSave": false,
+  "compileOnSave": true,
   "atom": {
     "rewriteTsconfig": false
   }
 }
-
-
